--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -54,6 +54,12 @@ table.verticalalign tbody tr td {
   vertical-align: middle;
 }
 
+/* avatar image */
 .avatar-size{
   width: 100px;
+  height: 100px;
+}
+.avatar-update-size{
+  width: 100px;
+  height: 100px;
 }
