--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= t "title" %></title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title><%= title(yield(:title)) %></title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", media: "all",
-      "data-turbolinks-track": "reload" %>
-    <%= javascript_include_tag "application",
-      "data-turbolinks-track": "reload" %>
-  </head>
+  <%= stylesheet_link_tag "application", media: "all",
+    "data-turbolinks-track": "reload" %>
+  <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
+</head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+  <div class="wrapper">
+    <%= render "layouts/nav" %>
+    <div class="container">
+      <%= render "layouts/shared/flash_messages" %>
+      <%= yield %>
+    </div>
+    <%= render "layouts/footer" %>
+  </div>
+</body>
 </html>
