--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,28 +1,31 @@
 <nav class="navbar navbar-default" id="head1">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Home</a>
+      <%= link_to t("page.home"),root_path ,class: "navbar-brand" %>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">All Course</a></li>
+        <li><%= link_to t("page.courses"),nil%></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li>
-                <%= link_to "Profile", "#", data: { toggle: "modal", target: "#myModal"} %>
-              </li>
-              <li><a href="#">Logout</a></li>
-            </ul>
-          </li>
+          <%= link_to t("page.dropdown"),nil, class: "dropdown-toggle", data: {toggle: "dropdown"},role: "button",aria: {haspopup: true, explanded: false} %>
+          <ul class="dropdown-menu">
+            <li>
+              <%= link_to t("page.profile"), "#", data: { toggle: "modal", target: "#myModal"} %>
+            </li>
+            <li>
+              <%= link_to t("page.logout"), logout_path, method: :delete %>
+            </li>
+          </ul>
+        </li>
       </ul>
-      </div><!-- /.navbar-collapse -->
+      <% else %>
+      <li class="active" >
+        <%= link_to t("page.login"),nil, data: {toggle: "modal", target: "#exampleMpdal"}%>
+      </li>
+      <% end %>
     </div>
-  </div><!-- /.container-fluid -->
+  </div>
 </nav>
-<%= stylesheet_link_tag "sup_user" %>
