--- a/app/views/layouts/shared/_flash_messages.html.erb
+++ b/app/views/layouts/shared/_flash_messages.html.erb
@@ -1,3 +1,5 @@
-<% flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %>"><%= message %></div>
-<% end %>
+<div class="col-md-6 col-md-offset-3" id="flash_messages">
+  <% flash.each do |key, value| %>
+  <%= content_tag(:div, value, {class: "alert alert-#{key}"}) %>
+  <% end %>
+</div>
