--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to t("page.courses"),nil%></li>
+        <li><%= link_to t("page.courses"), courses_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
