--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, t("page.user_page")) %>
 <div class="row ">
-  <table class="table table-inverse verticalalign">
+  <table class="table table-inverse verticalalign table-bordered">
     <thead>
       <tr>
         <th>Course name</th>
