--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,13 +1,16 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-.navbar{
-  margin-bottom : 0px;
+
+.navbar {
+  margin-bottom: 0px;
 }
+
 .logo {
-  witdh : 100px !important;
+  witdh: 100px !important;
 }
+
 .footer {
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
@@ -19,13 +22,16 @@
   padding: 15px;
   margin: 0 auto;
 }
+
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
 }
+
 .form-signin .checkbox {
   font-weight: 400;
 }
+
 .form-signin .form-control {
   position: relative;
   -webkit-box-sizing: border-box;
@@ -35,31 +41,112 @@
   padding: 10px;
   font-size: 16px;
 }
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
+
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
- /* table */
+/* table */
 table.verticalalign tbody tr td {
   vertical-align: middle;
 }
 
 /* avatar image */
-.avatar-size{
+.avatar-size {
   width: 100px;
   height: 100px;
 }
-.avatar-update-size{
+
+.avatar-update-size {
   width: 100px;
   height: 100px;
+}
+
+.no-padding {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+/* picture edit form */
+.image-upload {
+  position: relative;
+  .image-edit {
+    position: absolute;
+    right: -42px;
+    z-index: 1;
+    top: 3px;
+    input {
+      display: none;
+      + label {
+        display: inline-block;
+        width: 34px;
+        height: 34px;
+        margin-bottom: 0;
+        border-radius: 100%;
+        background: #FFFFFF;
+        border: 1px solid transparent;
+        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+        cursor: pointer;
+        font-weight: normal;
+        transition: all .2s ease-in-out;
+        &:hover {
+          background: #f1f1f1;
+          border-color: #d6d6d6;
+        }
+        &:after {
+          content: "\f040";
+          font-family: 'FontAwesome';
+          color: #757575;
+          position: absolute;
+          top: 10px;
+          left: 0;
+          right: 0;
+          text-align: center;
+          margin: auto;
+        }
+      }
+    }
+  }
+  .picture-preview {
+    width: 124px;
+    height: 124px;
+    position: relative;
+    border-radius: 100%;
+    border: 3px solid #ffffff;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+    > div {
+      width: 100%;
+      height: 100%;
+      border-radius: 100%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+}
+
+.remove_record {
+  color: #ad0808;
+  position: absolute;
+  top: 3px;
+
+  &:hover {
+    color: #780909;
+  }
+}
+
+span.error_message {
+  color: #a94442;
 }
