--- a/app/views/supervisors/courses/new.html.erb
+++ b/app/views/supervisors/courses/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t("page.course_create") %>
-<%= stylesheet_link_tag "course" %>
+<%= stylesheet_link_tag "supervisors/course" %>
 
 <div class="row">
   <h1 class="text-center"><%= t("page.course_create") %></h1>
@@ -8,5 +8,5 @@
   </div>
 </div>
 
-<%= javascript_include_tag "course" %>
-<%= javascript_include_tag "custom" %>
+<%= javascript_include_tag "supervisors/course" %>
+<%= javascript_include_tag "supervisors/custom" %>
