--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,7 +5,8 @@
 
     <ul class="list-unstyled components">
         <li class="active">
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Course</a>
+            <a href="#homeSubmenu" data-toggle="collapse"
+                aria-expanded="false" class="dropdown-toggle">Course</a>
             <ul class="collapse list-unstyled" id="homeSubmenu">
                 <li>
                     <a href="#">Add Course</a>
@@ -22,7 +23,8 @@
             <a href="#">User</a>
         </li>
         <li>
-            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Subject</a>
+            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle">Subject</a>
             <ul class="collapse list-unstyled" id="pageSubmenu">
                 <li>
                     <a href="#">Add Subject</a>
@@ -33,7 +35,8 @@
             </ul>
         </li>
         <li>
-            <a href="#Task" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Task</a>
+            <a href="#Task" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle">Task</a>
             <ul class="collapse list-unstyled" id="Task">
                 <li>
                     <a href="#">Add Task</a>
