--- a/app/views/supervisors/users/show.html.erb
+++ b/app/views/supervisors/users/show.html.erb
@@ -16,7 +16,8 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1 <a href="" title="View details"><i class="fa fa-eye"></i></a>
+            <th scope="row">
+              1 <a href="" title="View details"><i class="fa fa-eye"></i></a>
             </th>
             <td>Ruby on Rails</td>
             <td>20 days</td>
@@ -25,7 +26,9 @@
             <td><i class="fa fa-spinner"></i></td>
           </tr>
           <tr>
-            <th scope="row">2 <a href="" title="View details"><i class="fa fa-eye"></i></a></th>
+            <th scope="row">
+              2 <a href="" title="View details"><i class="fa fa-eye"></i></a>
+            </th>
             <td>Laravel</td>
             <td>20 days</td>
             <td><span class="label label-info">Pedding</span></td>
@@ -33,7 +36,9 @@
             <td>03/07/2019</td>
           </tr>
           <tr>
-            <th scope="row">3 <a href="" title="View details"><i class="fa fa-eye"></i></a></th>
+            <th scope="row">
+              3 <a href="" title="View details"><i class="fa fa-eye"></i></a>
+            </th>
             <td>Frond end</td>
             <td>20 Days</td>
             <td><span class="label label-warning">Finish</span></td>
@@ -78,11 +83,13 @@
   </div>
 </div>
 </div>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+  aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+        <button type="button" class="close" data-dismiss="modal"
+          aria-hidden="true"></button>
         <h4 class="modal-title" id="myModalLabel">Profile</h4>
       </div>
       <div class="modal-body">
@@ -105,7 +112,9 @@
       </div>
       <div class="modal-footer">
         <center>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">
+            Close
+          </button>
         </center>
       </div>
     </div>
