--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -16,4 +16,5 @@
       <%= render :partial => "courses/course", :collection => @courses %>
     </tbody>
   </table>
+  <%= will_paginate @courses %>
 </div>
