--- a/app/views/supervisors/courses/index.html.erb
+++ b/app/views/supervisors/courses/index.html.erb
@@ -26,10 +26,10 @@
           <td>
             <%= link_to image_tag(course.picture.url, alt: course.name,
               data: { turbolinks: false }, class: "img-circle avatar-size"),
-              edit_supervisors_course_path(course) %>
+              supervisors_course_path(course) %>
           </td>
           <td>
-            <%= link_to course.name, edit_supervisors_course_path(course),
+            <%= link_to course.name, supervisors_course_path(course),
               data: { turbolinks: false } %>
           </td>
           <td>
