--- a/app/views/supervisors/users/_form.html.erb
+++ b/app/views/supervisors/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for [:supervisors, @user] do |f| %>
   <%= render "layouts/shared/error_message", object: f.object %>
   <div class="form-group row">
     <%= f.label :email, class: "col-sm-4 form-control-label" %>
@@ -40,7 +40,7 @@
   <div class="form-group row">
     <%= f.label :gender, class: "col-sm-4 form-control-label" %>
     <div class="col-sm-8">
-      <%= f.collection_radio_buttons :gender, User.gender_types_i18n,
+      <%= f.collection_radio_buttons :gender, User.gender_types,
         :second, :first, {checked: User.gender_types[:male]} %>
     </div>
   </div>
