--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
 /*
  *= require custom.scss
  *= require font-awesome
+ *= require material_icons
  *= require select2
  *= require dataTables/jquery.dataTables
  */
