--- a/app/views/supervisors/users/new.html.erb
+++ b/app/views/supervisors/users/new.html.erb
@@ -3,6 +3,6 @@
 <div class="row">
   <h1 class="text-center"><%= t("page.user_create") %></h1>
   <div class="col-md-6 col-md-offset-3">
-    <%= render "users/form" %>
+    <%= render "supervisors/users/form" %>
   </div>
 </div>
