--- a/app/views/supervisors/trainees/new.html.erb
+++ b/app/views/supervisors/trainees/new.html.erb
@@ -1,13 +1,15 @@
 <div class="row">
   <div class="col-md-12">
     <h3 class="text-center">Infomartion: </h3>
+    <% @supervisors_course.each do |sup| %>
+      <div class="row">
+        <div class="col-md-6 text-right">Name: <%= sup.fullname %></div>
+        <div class="col-md-6">Email: <%= sup.email %></div>
+      </div>
+    <% end %>
     <div class="row">
-      <div class="col-md-6 text-right">Name: Nguyen thuong</div>
-      <div class="col-md-6">Email: nguyenthuong@gmail.com</div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 text-right">Course name: Design</div>
-      <div class="col-md-6">Date end: 11/11/2019</div>
+      <div class="col-md-6 text-right">Course name: <%= infomation_this_course_user(params[:id]).name %></div>
+      <div class="col-md-6"><%= l(infomation_this_course_user(params[:id]).date_end, format: :default ) %></div>
     </div>
   </div>
   <div class="col-md-11 offset-1 ">
@@ -50,4 +52,3 @@
   <% end %>
 </div>
 <%= javascript_include_tag "supervisors/trainees.js" %>
-
