--- a/app/views/supervisors/courses/_form.html.erb
+++ b/app/views/supervisors/courses/_form.html.erb
@@ -32,11 +32,15 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <%= f.label :date_start %>
+        <% if action_name == "edit" %>
+          <%= f.date_field :date_start, disabled: "true" ,class: "form-control" %>
+        <% else %>
         <%= f.date_field :date_start, class: "form-control" %>
+        <% end %>
       </div>
       <div class="form-group col-md-6">
         <%= f.label :date_end %>
-        <%= f.date_field :date_end, class: "form-control" %>
+          <%= f.date_field :date_end, class: "form-control" %>
       </div>
     </div>
   <div class="col-md-12">
